Fixed alignments between safari and chrome for contact class. Email should be able to highlight on safari as well.

--- a/src/components/css/about.css
+++ b/src/components/css/about.css
@@ -66,15 +66,6 @@ h1 {
   }
 }
 
-strong {
-  text-align: left;
-}
-
-p {
-  list-style-position: outside;
-  text-align: left;
-}
-
 ul {
   list-style-position: outside;
   padding-left: 20px;
